# fractos

./: Cargo.toml  LICENSE  README
.github/workflows/: rust.yml
bins/manager/: Cargo.toml
bins/manager/src/: main.rs
bins/manager/src/libs/: args.rs  mod.rs  render.rs  tasks_manager.rs  tasksplitter.rs
bins/worker/: Cargo.toml
bins/worker/src/: main.rs
libs/complex/: Cargo.toml
libs/complex/src/: lib.rs
libs/fractal/: Cargo.toml
libs/fractal/src/: lib.rs
libs/messages/: Cargo.toml
libs/messages/src/: lib.rs  point.rs  range.rs  resolution.rs
libs/worker/: Cargo.toml
libs/worker/src/: lib.rs
