[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.7.0"
clap = { version = "4.2.7", features = ["derive"] }
fractal = { path = "../../libs/fractal" }
complex = { path = "../../libs/complex" }
messages = {path = "../../libs/messages"}
tokio = { version = "1.28", features = ["rt", "net", "macros", "rt-multi-thread", "sync"] }
