[package]
name = "worker-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
messages = {path="../../libs/messages"}
worker = {path="../../libs/worker/"}
serde = {workspace = true}
serde_json = "1.0"
